# backend

./: .dockerignore  .env.example  .gitignore  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/api/v1/: health.py
app/core/: config.py
tests/: conftest.py  test_api.py
